--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -140,6 +140,28 @@
    "source": [
     "1456*140"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "465"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "temp = pd.read_csv('/Users/tonygong/Documents/GNNs_codes/dailyCo2/dailyCo2Updated/dataset/grp_edge_weight.csv').values\n",
+    "len(temp)"
+   ]
   }
  ],
  "metadata": {
